Adjust layout issues on Index

--- a/styles/main.css
+++ b/styles/main.css
@@ -285,13 +285,12 @@ h3 {
 }
 
 .archive-thumbnail {
-  aspect-ratio: 4/3;
+  aspect-ratio: 1/1;
   overflow: hidden;
 }
 
 .archive-thumbnail img {
   width: 100%;
-  height: 100%;
   object-fit: cover;
 }
 
